# ocaml-study-series

./: .gitignore  README.md
AI/vanilla_rnn_init/: Makefile  README.md  dune-project  vanilla_rnn_init.opam
CLI/: README.md
CLI/hello_01/: Makefile  README.md  dune-project  hello_01.opam
CLI/hello_01/lib/: hello_01.ml
CLI/hello_01/test/: dune  test_hello_01.ml
CLI/hello_02/: Makefile  README.md  dune-project  hello_02.opam
CLI/hello_02/lib/: app.ml  app.mli  dune  en.ml
CLI/hello_02/test/: dune  test_hello_02.ml
CLI/korean-docx-parser/: README.md  dune-project  korean-docx-parser.opam
CLI/korean-docx-parser/lib/: dune  korean_docx_parser.ml
CLI/korean-docx-parser/output/: 애국가.md
CLI/korean-docx-parser/test/: dune  test_korean_docx_parser.ml
CLI/korean-ls-demo/: Makefile  README.md  check_logs.sh  dune-project  korean-ls-demo.opam
CLI/korean-ls-demo/docs/: INTEGRATION_TEST.md  INTEGRATION_TEST_GUIDE.md  MANUAL_TEST_CHECKLIST.md  QUICK_TEST_REFERENCE.md  TEST_README.md  TEST_SUMMARY.md
CLI/korean-ls-demo/lib/: dune
CLI/korean-ls-demo/lib/analyzer/: analyzer.ml  symbol_table.ml
CLI/korean-ls-demo/lib/document/: manager.ml
CLI/korean-ls-demo/lib/lsp/: protocol.ml  types.ml
CLI/korean-ls-demo/lib/parser/: ast.ml  lexer.ml  parser.ml
CLI/korean-ls-demo/lib/providers/: completion.ml  definition.ml  hover.ml
CLI/korean-ls-demo/lib/utils/: logger.ml
CLI/korean-ls-demo/test/: dune  test_completion.kr  test_comprehensive.kr  test_errors.kr  test_integration.sh  test_logger.ml  test_sample.kr
CLI/korean-ls-demo/vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
CLI/korean-ls-demo/vscode-extension/src/: client.ts  configuration.ts  extension.ts
CLI/minimo/: Makefile  README.md
GUI/my_gui_app/: .gitignore  .ocamlformat  Makefile  README.md  contacts.db  dune-project  my_gui_app.opam
GUI/my_gui_app/docs/: ADDRESS_BOOK_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md
GUI/my_gui_app/lib/: dune  my_gui_app.ml
GUI/my_gui_app/lib/application/: application.ml  dune  use_cases.ml
GUI/my_gui_app/lib/domain/: domain.ml  dune  events.ml  types.ml
GUI/my_gui_app/lib/infrastructure/: dune  gtk_adapter.ml  infrastructure.ml  sqlite_adapter.ml
GUI/my_gui_app/lib/presentation/: app_controller.ml  dune  presentation.ml  window_builder.ml
GUI/my_gui_app/test/: dune  test_my_gui_app.ml
OCaml_from_the_very_beginning/ch00_hello_world/: dune-project
OCaml_from_the_very_beginning/ch05_sorting/: dune-project
OCaml_from_the_very_beginning/ch05_sorting/test/: dune
OCaml_from_the_very_beginning/ch09_higher_order_function/: dune-project
OCaml_from_the_very_beginning/ch10_define_types/: dune-project
OCaml_from_the_very_beginning/ch11_trees/: dune-project
OCaml_from_the_very_beginning/ch13_reference/: run.sh
OCaml_from_the_very_beginning/ch15_module/: run.sh
Patterns/plugin_architecture/: .gitignore  Makefile  README.md  dune-project  dune-workspace
Patterns/signature_structure_functor/: .ocamlformat  Makefile  README.md  dune-project
Workspace/: setup_workspace.sh  system_prompt.md
basic/: README.md
basic/hello/: dune-project
basic/hello_01/: README.md  dune-project  hello_01.opam
basic/hello_02/: Makefile  README.md  dune-project  hello_02.opam
basic/hello_world/: .ocamlformat  README.md  README.org  dune-project
basic/minimo/: Makefile  README.org  dune  dune-project
ch00_hello_world/lib/: dune
ch00_hello_world/test/: dune
ch03_pattern_matching/: dune-project
ch03_pattern_matching/lib/: dune
ch04_list/: dune-project
ch04_list/test/: dune
ch05_sorting/lib/: dune
ch06_composition/: dune-project
ch06_composition/lib/: core.mli  math.ml
ch06_composition/test/: dune
ch07_exception/lib/: core.mli
ch07_exception/test/: dune
ch08_search/lib/: core.ml
ch09_higher_order_function/lib/: help.ml
ch09_higher_order_function/test/: dune
ch11_trees/lib/: core.ml  core.mli
ch11_trees/test/: dune
ch12_input_output/lib/: core.ml  core.mli
ch13_reference/: dune-project
ch14_floating_point/: dune-project
ch14_floating_point/lib/: core.ml
ch15_module/: ch15_module.opam
ch15_module/lib/: core.mli
ch15_module/test/: dune
ch16_opium_webapp/: README.md
ch16_opium_webapp/test/: dune
jupyter-notebook/: introduction.ipynb
jupyter_lab/: README.md  README.org
ocaml_from_the_very_beginning/ch01_starting_off/: .gitignore  dune-project
ocaml_from_the_very_beginning/ch09_higher_order_function/: .ocamlformat  dune-project
ocaml_from_the_very_beginning/ch09_higher_order_function/lib/: core.ml  core.mli
ocaml_from_the_very_beginning/ch12_input_output/: Makefile  dune-project
ocaml_from_the_very_beginning/ch12_input_output/lib/: core.ml  core.mli
ocaml_from_the_very_beginning/ch12_input_output/test/: dune
web/dream/dream_demo_01/: README.md  README.org  dream_demo_01.opam  dune-project
web/dream/dream_demo_01/lib/: dune
web/dream/dream_demo_01/test/: dune
web/dream/dream_demo_02/: .ocamlformat  .ocamlformat-ignore  README.md  README.org  db.sqlite  dream_demo_02.opam  dune-project
web/dream/dream_demo_02/lib/: dune
web/dream/dream_demo_02/public/: index.html
web/dream/dream_demo_02/test/: dune
web/reason/reason_demo_01/: Makefile  README.md  dune-project  reason_demo_01.opam
web/reason/reason_demo_01/lib/: dune
web/reason/reason_demo_01/test/: dune
web/reason/reason_demo_02/: .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  dune-project  reason_demo_02.opam  setup.sh
web/reason/reason_demo_02/docs/: QUICKSTART.md
web/reason/reason_demo_02/lib/: dune  lib.ml
web/reason/reason_demo_02/lib/application/: contact_service.ml  dune
web/reason/reason_demo_02/lib/domain/: contact.ml  contact_repository.ml  dune
web/reason/reason_demo_02/lib/infrastructure/: dune  sqlite_contact_repository.ml
web/reason/reason_demo_02/lib/presentation/: contact_dto.ml  dune  web_handlers.ml  web_handlers.re
web/reason/reason_demo_02/test/: dune  test_reason_demo_02.ml
(+160 files in other folders)
