(lang dune 3.20)

(name hello_01)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license BSD-3-Clause)

(documentation https://url/to/documentation)

(package
 (name hello_01)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml (>= 5.3.0)) dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
