(lang dune 3.20)

(name korean-docx-parser)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name korean-docx-parser)
 (synopsis "DOCX to Markdown converter")
 (description "A tool to convert DOCX files to Markdown format")
 (depends 
  ocaml
  camlzip
  xmlm)
 (tags
  ("docx" "markdown" "converter")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
