(lang dune 3.20)

(name my_gui_app)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name my_gui_app)
 (synopsis "SQLite-based Address Book Desktop Application")
 (description "A GTK-based address book application using SQLite for data persistence, built with Clean Architecture principles")
 (depends 
  ocaml
  lablgtk3
  sqlite3)
 (tags
  ("address book" "gtk" "sqlite" "clean architecture")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
