(lang dune 3.17)

(name dream_demo_02)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dream_demo_02)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  ocaml 
  (dune (>= 3.17))
  (dream (>= 1.0.0~alpha7))
  (caqti-driver-sqlite3 (>= 2.1.2))
  (lwt_ppx (>= 2.1.0))
  (ppx_yojson_conv (>= 0.17.0)))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
