(lang dune 3.20)

(name reason_demo_01)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Mingyu Choo <mingyuchoo@gmail.com>")

(maintainers "Mingyu Choo <mingyuchoo@gmail.com>")

(license BSD-3-Clause)

(documentation https://url/to/documentation)

(package
 (name reason_demo_01)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml (>= 5.3.0)) dune)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
